<resources>
    <string name="app_name">lanchonete</string>
    <string name="nome">Nome</string>
    <string name="valor">Valor</string>
    <string name="cadastrar">Cadastrar</string>
    <string name="descricao">Descrição</string>
    <string name="imagem">Imagem</string>
    <string name="adicionar">Adicionar</string>
    <string name="direitos">All Rigth Reserved 2022 @</string>
    <string name="cliente">Cliente</string>
    <string name="funcionario">Funcionários</string>
    <string name="pedidos">Pedidos</string>
    <string name="doces">Doces</string>
    <string name="salgados">Salgados</string>
    <string name="produtos">Produtos</string>
    <string name="bebidas">Bebidas</string>


    <string name="link_coca_cola">assets/img/coca.png</string>
    <string name="link_fanta">assets/img/fanta.png</string>
    <string name="link_guarana">assets/img/guarana.png</string>
    <string name="link_pepsi">assets/img/pepsi.png</string>

    <string name="link_pudim">assets/img/pudim.png</string>
    <string name="link_bolo">assets/img/bolo.png</string>
    <string name="link_donuts">assets/img/donuts.png</string>


    <string name="link_triplo_hamburguer">assets/img/triplo hamburguer.png</string>
    <string name="link_xsaladaegg">assets/img/xsaladaegg.png</string>
    <string name="link_hamburguer">assets/img/hamburguer.png</string>

</resources>