<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.lanchonete.funcionario.post.SalgadoActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <ImageButton
            android:id="@+id/btnSalgadoVoltar"
            android:layout_width="54dp"
            android:layout_height="48dp"
            android:layout_marginStart="28dp"
            android:layout_marginTop="28dp"
            android:contentDescription="@string/imagem"
            app:srcCompat="@drawable/ic_baseline_arrow_back_24" />

        <TextView
            android:id="@+id/titulo_Salgado"
            android:layout_width="180dp"
            android:layout_height="61dp"
            android:layout_marginStart="98dp"
            android:layout_marginTop="15dp"
            android:text="@string/salgados"
            android:textColor="#2F5022"
            android:textColorHint="#6CEA3A"
            android:textSize="48sp" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/nome_salgadoInputLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
            android:layout_width="300dp"
            android:layout_height="70dp"
            android:layout_marginStart="25dp"
            android:layout_marginTop="30dp"
            app:errorEnabled="true"
            app:helperText="Campos Importantes"
            app:helperTextTextColor="@color/blue">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/nome_salgado"
                android:layout_width="match_parent"
                android:layout_height="52dp"
                android:hint="@string/nome"
                android:inputType="textPersonName" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/valor_salgadoInputLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
            android:layout_width="230dp"
            android:layout_height="70dp"
            android:layout_marginStart="65dp"
            android:layout_marginTop="24dp"
            app:errorEnabled="true"
            app:helperText="Campos Importantes"
            app:helperTextTextColor="@color/blue">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/valor_salgado"
                android:layout_width="match_parent"
                android:layout_height="52dp"
                android:hint="@string/valor"
                android:inputType="numberDecimal" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/descricao_salgadoInputLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
            android:layout_width="300dp"
            android:layout_height="74dp"
            android:layout_marginStart="25dp"
            android:layout_marginTop="24dp"
            android:gravity="start|top"
            app:errorEnabled="true"
            app:helperText="Campos Importantes"
            app:helperTextTextColor="@color/blue">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/descricao_salgado"
                android:layout_width="match_parent"
                android:layout_height="54dp"
                android:hint="@string/descricao"
                android:inputType="textMultiLine" />
        </com.google.android.material.textfield.TextInputLayout>

        <RadioGroup
            android:id="@+id/radioSalgado"
            android:layout_width="match_parent"
            android:layout_height="435dp"
            android:layout_marginTop="20dp">

            <ImageButton
                android:id="@+id/imageButtonHamburguer"
                android:layout_width="135dp"
                android:layout_height="150dp"
                android:layout_marginStart="30dp"
                android:layout_marginTop="20dp"
                android:scaleType="centerInside"
                app:srcCompat="@drawable/hamburguer" />

            <RadioButton
                android:id="@+id/radioButtonHamburguer"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginStart="84dp"
                android:onClick="checkButtonSalgado"
                android:text="@string/link_hamburguer" />

            <ImageButton
                android:id="@+id/imageButtonTriploHamburguer"
                android:layout_width="135dp"
                android:layout_height="150dp"
                android:layout_marginStart="200dp"
                android:layout_marginTop="-180dp"
                android:scaleType="centerInside"
                app:srcCompat="@drawable/triplo_hamburguer" />

            <RadioButton
                android:id="@+id/radioButtonTriploHamburguer"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginStart="255dp"
                android:onClick="checkButtonSalgado"
                android:text="@string/link_triplo_hamburguer" />

            <ImageButton
                android:id="@+id/imageButtonXSaladaEgg"
                android:layout_width="135dp"
                android:layout_height="150dp"
                android:layout_marginStart="130dp"
                android:layout_marginTop="40dp"
                android:scaleType="centerInside"
                app:srcCompat="@drawable/xsaladaegg" />

            <RadioButton
                android:id="@+id/radioButtonXSaladaEgg"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginStart="184dp"
                android:onClick="checkButtonSalgado"
                android:text="@string/link_xsaladaegg" />

        </RadioGroup>

        <Button
            android:id="@+id/botao_Salgado"
            android:layout_width="320dp"
            android:layout_height="49dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="14dp"
            android:layout_marginBottom="35dp"
            android:backgroundTint="@color/green_foward"
            android:text="@string/cadastrar" />

    </LinearLayout>


</ScrollView>


