<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="18dp"   >


    <TextView
        android:id="@+id/salgadosListItem_nome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginTop="12dp"
        android:text="@string/nome"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/salgadosListItem_descricao"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginTop="8dp"
        android:paddingBottom="18dp"
        android:text="@string/descricao"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/salgadosListItem_nome" />

    <TextView
            android:id="@+id/salgadosListItem_valor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/valor"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="44dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="52dp"/>



</androidx.constraintlayout.widget.ConstraintLayout>