<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="18dp">


    <TextView
            android:id="@+id/bebidasListItem_nome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="48dp"
            android:layout_marginTop="12dp"
            android:text="@string/nome"
            android:textColor="@color/black"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

    <TextView
            android:id="@+id/bebidasListItem_descricao"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="48dp"
            android:layout_marginTop="8dp"
            android:paddingBottom="18dp"
            android:text="@string/descricao"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/bebidasListItem_nome"/>

    <TextView
            android:id="@+id/bebidasListItem_valor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/valor"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="48dp"
            app:layout_constraintStart_toEndOf="@+id/bebidasListItem_descricao"
            android:layout_marginStart="16dp"/>

    <Button
            android:text="DELETE"
            android:textSize="08sp"
            android:layout_width="73dp"
            android:layout_height="41dp"
            android:id="@+id/btnDelete"
            android:backgroundTint="#F30101"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="16dp"
            tools:ignore="HardcodedText"/>

    <!--    <Button-->
    <!--            android:text="Delete"-->
    <!--            android:layout_width="66dp"-->
    <!--            android:layout_height="38dp"-->
    <!--            android:id="@+id/btnDelete"-->
    <!--            android:textSize="08dp"-->
    <!--            android:backgroundTint="#D51212"-->
    <!--            tools:layout_editor_absoluteY="31dp"-->
    <!--            tools:layout_editor_absoluteX="184dp"-->
    <!--            android:layout_marginTop="30dp"-->
    <!--            android:layout_marginStart="50dp"-->
    <!--            app:layout_constraintTop_toTopOf="parent"-->
    <!--            app:layout_constraintStart_toEndOf="@+id/bebidasListItem_descricao"/>-->


</androidx.constraintlayout.widget.ConstraintLayout>